added nav bar to all pages

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     <a class="nav-item nav-link active" href="#">Home</a>
-                    <a class="nav-item nav-link" href="#">About</a>
-                    <a class="nav-item nav-link" href="#">Contact</a>
+                    <a class="nav-item nav-link" href="/Users/aslanka/Desktop/school/itsc3155/bootstrap_site/about.html">About</a>
+                    <a class="nav-item nav-link" href="/Users/aslanka/Desktop/school/itsc3155/bootstrap_site/contact.html">Contact</a>
                 </div>
             </div>
         </nav>
@@ -32,7 +32,8 @@
 
 
     <main>
-
+        <h1>Welcome To My Website!</h1>
+        <img src="https://media.licdn.com/dms/image/C4E03AQF0h_tiMM_Xew/profile-displayphoto-shrink_100_100/0/1657641148439?e=1681948800&v=beta&t=Uimm8AnvXoqQA8FSsdUHCCg5jcssJUQ3hHadqrmKRRA" width="200px">
     </main>
 
     <footer>
