completed about page

--- a/about.html
+++ b/about.html
@@ -30,7 +30,24 @@
         </nav>
     </header>
 
+    <main>
+        <div id="about" class="container mt-5">
+            <h2>About Us</h2>
+            <p>Welcome to our website development company! We are passionate about creating websites that not only look great but also function seamlessly. Our team of expert developers and designers work closely with our clients to bring their vision to
+                life, no matter how big or small the project may be. From custom designs to e-commerce solutions, we pride ourselves on delivering high-quality work that exceeds expectations. We understand the importance of having a strong online presence
+                in today's digital age, which is why we strive to create websites that not only meet but exceed industry standards. Trust us to create a website that is both visually stunning and functional, with a user experience that is unparalleled.
+            </p>
 
+            <h4>Some of the things we do:</h4>
+            <ul>
+                <li>Responsive Web Design</li>
+                <li>Bootstrap Framework</li>
+                <li>CSS Customization</li>
+                <li>SEO Optimization</li>
+            </ul>
+            <p>If you're interested in learning more about us or the technologies we used for this website check out <a href="https://getbootstrap.com/" target="_blank">Bootstrap Site</a>.</p>
+        </div>
+    </main>
 
 
     <footer>
