--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Ayush-Website</a>
+            <a class="navbar-brand" href="#">PixelPioneers</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -32,8 +32,8 @@
 
 
     <main>
-        <h1>Welcome To My Website!</h1>
-        <img src="https://media.licdn.com/dms/image/C4E03AQF0h_tiMM_Xew/profile-displayphoto-shrink_100_100/0/1657641148439?e=1681948800&v=beta&t=Uimm8AnvXoqQA8FSsdUHCCg5jcssJUQ3hHadqrmKRRA" width="200px">
+        <h1>Welcome To My PixelPioneers, Where All Your Software Needs Are Met!</h1>
+        <img src="https://media.licdn.com/dms/image/C4E03AQF0h_tiMM_Xew/profile-displayphoto-shrink_100_100/0/1657641148439?e=1681948800&v=beta&t=Uimm8AnvXoqQA8FSsdUHCCg5jcssJUQ3hHadqrmKRRA" width="200px" text-align="center">
     </main>
 
     <footer>
