changing image on home page

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <main>
         <h1>Welcome To My PixelPioneers, Where All Your Software Needs Are Met!</h1>
-        <img src="https://media.licdn.com/dms/image/C4E03AQF0h_tiMM_Xew/profile-displayphoto-shrink_100_100/0/1657641148439?e=1681948800&v=beta&t=Uimm8AnvXoqQA8FSsdUHCCg5jcssJUQ3hHadqrmKRRA" width="200px" text-align="center">
+        <img src="https://cdn.pixabay.com/photo/2016/04/04/14/12/monitor-1307227__340.jpg" width="200px" text-align="center">
     </main>
 
     <footer>
