--- a/about.html
+++ b/about.html
@@ -50,7 +50,13 @@
     </main>
 
 
-    <footer>
+
+    <footer class="page-footer font-small blue">
+
+        <div class="footer-copyright text-center py-3">© 2020 Copyright:
+            <a href="/"> PixelPioneers.com</a>
+        </div>
+
 
     </footer>
 </body>
