--- a/index.html
+++ b/index.html
@@ -36,7 +36,12 @@
         <img src="https://cdn.pixabay.com/photo/2016/04/04/14/12/monitor-1307227__340.jpg" width="200px" text-align="center">
     </main>
 
-    <footer>
+    <footer class="page-footer font-small blue">
+
+        <div class="footer-copyright text-center py-3">© 2020 Copyright:
+            <a href="/"> PixelPioneers.com</a>
+        </div>
+
 
     </footer>
 </body>
