--- a/contact.html
+++ b/contact.html
@@ -31,9 +31,41 @@
     </header>
 
 
+    <main>
+        <div class="container">
+            <h1>Contact Us</h1>
+            <form action="submit-form.php" method="post">
+                <div class="form-group">
+                    <label for="name">Name:</label>
+                    <input type="text" class="form-control" id="name" name="name" required>
+                </div>
+                <div class="form-group">
+                    <label for="email">Email:</label>
+                    <input type="email" class="form-control" id="email" name="email" required>
+                </div>
+                <div class="form-group">
+                    <label for="message">Message:</label>
+                    <textarea class="form-control" id="message" name="message" rows="5" required></textarea>
+                </div>
+                <div class="form-check">
+                    <input type="checkbox" class="form-check-input" id="newsletter" name="newsletter">
+                    <label class="form-check-label" for="newsletter">Subscribe to our newsletter</label>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </div>
+
+    </main>
 
 
-    <footer>
+
+
+    <footer class="page-footer font-small blue">
+
+        <div class="footer-copyright text-center py-3">© 2020 Copyright:
+            <a href="/"> PixelPioneers.com</a>
+        </div>
+
 
     </footer>
 </body>
